--- a/src/features/post/Post.css
+++ b/src/features/post/Post.css
@@ -22,6 +22,7 @@
   justify-content: center;
   align-items: center;
   margin: 15px 0px 15px 15px;
+  color: var(--text-gray);
 }
 
 .upvote,
@@ -33,6 +34,7 @@
 .post-votes-value {
   margin: 10px 0;
   font-size: 14px;
+  font-weight: 600;
 }
 
 .post-votes-value-loading {
@@ -85,6 +87,7 @@
   align-items: center;
   margin: 10px 15px 10px 15px;
   font-size: 12px;
+  color: var(--text-gray);
 }
 
 .post-metadata,
