--- a/src/features/search/SearchBar.css
+++ b/src/features/search/SearchBar.css
@@ -9,6 +9,8 @@
   border-radius: 10px;
   outline: none;
   text-align: center;
+  transition: all 300ms ease-out;
+  width: 34px;
 }
 
 .search-button {
