--- a/src/features/post/Post.css
+++ b/src/features/post/Post.css
@@ -58,6 +58,7 @@
 }
 
 .post-title {
+  cursor: pointer;
   font-weight: 600;
 }
 
@@ -127,6 +128,7 @@
   display: inline-flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
 }
 
 .comment {
