--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,19 @@
 
 :root {
   --primary-blue: #3ba8ce;
-  --loading-gray: #dcdcdc;
+  --loading-gray: #ebebeb;
+  --loading-highlight: #f5f5f5;
   --text-gray: #717171;
+}
+
+@keyframes leftToRight {
+  from {
+    transform: translate(0);
+  }
+
+  to {
+    transform: translate(100%);
+  }
 }
 
 *, *:before, *:after {
