--- a/src/features/detailed/Detailed.css
+++ b/src/features/detailed/Detailed.css
@@ -114,3 +114,7 @@
   background-color: var(--loading-highlight);
   box-shadow: 0 0 60px 60px var(--loading-highlight);
 }
+
+.detailed-comments {
+  margin-top: 50px;
+}
